disable SPN form
This form is receiving a lot of spam with attempted SQL injection
attacks. We need to rethink this feature so this commit just removes it
entirely.

--- a/python/fatcat_web/templates/release_save.html
+++ b/python/fatcat_web/templates/release_save.html
@@ -11,76 +11,27 @@
 <div class="ui segment" style="padding: 3em;">
 <h1 class="ui header">"Save Paper Now"</h1>
 
-{% if spn_status == "not-configured" %}
-
-<div class="ui error message" style="margin-top: 2em;">
-  <div class="header">Not Available</div>
-  <p>Save Paper Now feature isn't configured, sorry about that.
-</div>
-
-{% elif spn_status == "kafka-error" %}
-
 <div class="ui error message" style="margin-top: 2em;">
   <div class="header">Error</div>
   <p>Whoops, something went wrong and we couldn't enqueue your request. This
   didn't have anything to do with the URL you supplied; please try again later.
 </div>
 
-{% elif spn_status == "success" %}
-
-<div class="ui positive message" style="margin-top: 2em;">
-  <div class="header">Success</div>
-  <p>URL has been submitted to the bot queue for crawling. If fulltext content
-  is found, it will be imported into the catalog for review. Keep an eye on the
-  <a href="/reviewable">reviewable editgroups</a> list (can take 5-10 minutes
-  depending on throughput and batch sizes).
-</div>
-
+{% if release and release.ext_ids.doi %}
+  {% set syp_suffix = release.ext_ids.doi %}
 {% else %}
-<form class="ui form" id="save_release_form" method="POST" action="/release/{{ release.ident }}/save">
-  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-
-  <p>If you know of a legitimate public web access option for this work, you
-  can help us preserve it by filling out the form below. Using the Wayback
-  Machine's <a href="https://web.archive.org/save">"Save Page Now"</a> feature,
-  we will attempt to crawl, process, and verify the content and add it to the
-  catalog.
-
-  {% if release and release.ext_ids.doi %}
-    {% set syp_suffix = release.ext_ids.doi %}
-  {% else %}
-    {% set syp_suffix = "" %}
-  {% endif %}
-
-  <p style="margin-top: 1em; margin-bottom: 1em;">If you are the author of this
-  work, and the published version is not publicly available, another option is
-  to upload an version to an institutional or discipline repository. The
-  <a href="https://shareyourpaper.org/{{ syp_suffix }}">Share Your Paper</a>
-  tool can help with this process.
-
-  <p style="margin-top: 1em; margin-bottom: 1em;"><b>Important:</b>
-  double-check the publication stage of the file you are submitting. We
-  distinguish between pre-prints, manuscripts, and the published version of
-  record (if applicable).
-
-  {{ edit_macros.form_field_basic(form.base_url) }}
-
-  <div class="ui equal width fields">
-    {{ edit_macros.form_field_basic(form.release_stage) }}
-    {{ edit_macros.form_field_basic(form.ingest_type) }}
-  </div>
-
-  <br>
-  <input class="ui primary submit button big left floated" type="submit" value="Submit URL" style="margin-right: 1em;">
-  <div>
-    <i>Your request will automatically be enqueued for our bots to crawl and
-    process. All new files will be reviewed before being included in the
-    catalog
-    </i>
-  </div>
-
-</form>
+  {% set syp_suffix = "" %}
 {% endif %}
+
+<p>If you know of a legitimate public web access option for this work, you
+can help us preserve using the Wayback Machine's <a href="https://web.archive.org/save">"Save Page Now"</a> feature.
+</p>
+<p style="margin-top: 1em; margin-bottom: 1em;">If you are the author of this
+work, and the published version is not publicly available, another option is
+to upload an version to an institutional or discipline repository. The
+<a href="https://shareyourpaper.org/{{ syp_suffix }}">Share Your Paper</a>
+tool can help with this process.
+</p>
 
 </div>
 </div>
